--- a/index.html
+++ b/index.html
@@ -200,11 +200,18 @@
         <div class="wrapper">
           <section>
             <div class="brands">
-              <span class="las la-magento"></span>
-              <span class="las la-sass"></span>
-              <span class="las la-hips"></span>
-              <span class="las la-less"></span>
-              <span class="las la-slack"></span>
+              <span class="lab la-html5"></span>
+              <span class="lab la-css3-alt"></span>
+              <span class="lab la-js-square"></span>
+              <span class="lab la-vuejs"></span>
+              <span class="lab la-node-js"></span>
+              <span class="lab la-react"></span>
+              <span class="lab la-bootstrap"></span>
+              <span class="lab la-wordpress"></span>
+              <span class="lab la-sass"></span>              
+              <span class="lab la-hips"></span>
+              <span class="lab la-less"></span>              
+              <span class="lab la-adobe"></span>
             </div>
           </section>
         </div>
